# flake-uv-template

./: .gitignore  CODEOWNERS  README.md  copier.yml  flake.nix  prek.toml  pyproject.toml
.helix/: languages.toml
src/grokking/: __init__.py
template/: .copierignore  .gitignore  CLAUDE.md  README.md  flake.nix  layout.kdl  prek.toml  pyproject.toml
template/scripts/: check_test_naming.py  watch-dir
template/src/{{ module_name }}/: __init__.py
template/tests/{{ module_name }}_test/: filler_test.py
tests/grokking/: filler_test.py
